[package]
name = "ball_image"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.79"      # Exact version
clap = { version = "=4.4.11", features = ["derive"] }
image = "0.24"
rayon = "1.7"